--- a/童创科美-python四级.HTML
+++ b/童创科美-python四级.HTML
@@ -29,7 +29,7 @@
 
         <!-- Choice Questions Section -->
         <div>
-            <h3>选择题（答案示例：ABCDABCDAB）</h3>
+            <h3>选择题（答案示例ABCDABCDAB）</h3>
             <div>
                 共 <span id="choiceCount">0</span> 题，
                 <input type="text" id="choiceInput" placeholder="请输入选择题答案" 
@@ -75,14 +75,14 @@
 			{
                 name: "2024-03python四级(真题)",
                 paperLink: "https://i1pg678nx3r.feishu.cn/file/DhN1bMo5Ro5dzfxBjEPcPxpWnNJ",
-                choiceAnswers: " CCDDDCABCDDBDAA",
+                choiceAnswers: "CCDDDCABCDDBDAA",
                 judgeAnswers: "1100111011",
                 analysisLink: "https://i1pg678nx3r.feishu.cn/file/PlJvbR7keoo8DbxvZBKcK5SbnKd"
             },
             {
                 name: "2024-06python四级(真题)",
                 paperLink: "https://i1pg678nx3r.feishu.cn/file/ZFQ6b1V4sozUPRxc1qwc5RhJnDf",
-                choiceAnswers: " CBCDCAAADADDBBD",
+                choiceAnswers: "CBCDCAAADADDBBD",
                 judgeAnswers: "1110100011",
                 analysisLink: "https://i1pg678nx3r.feishu.cn/file/EC0xbuCzKoRqV8xTZv5cZYsRn7e"
             },
@@ -96,7 +96,7 @@
             {
                 name: "2024-12python四级(真题)",
                 paperLink: "https://i1pg678nx3r.feishu.cn/file/ZAlJbyS8goQPzPx6TAEcsWKmnXd",
-                choiceAnswers: " CADCACDCBABADBA",
+                choiceAnswers: "CADCACDCBABADBA",
                 judgeAnswers: "1010110101",
                 analysisLink: "https://i1pg678nx3r.feishu.cn/file/LFvmbRlpmo4uukx35NgcvhMTn0d"
             },
